[package]
name = "equimix-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.44.1",features = ["full"]}
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
colored = "3.0.0"